fix: hero section to easily be read on mobile view

--- a/code-rad/css/responsive.css
+++ b/code-rad/css/responsive.css
@@ -57,6 +57,8 @@
 }
 
 @media screen and (max-width: 480px) {
+  header { text-align: center; }
+  
   .why-me-wrapper {
     flex-direction: column;
     text-align: center;
